src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Fax__c</fullName>
        <label>Fax</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Integration__c</fullName>
        <description>Change to Request Sync to Update in QuickBooks Online</description>
        <inlineHelpText>Change to Request Sync to Update in QuickBooks Online</inlineHelpText>
        <label>Integration</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Sync</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Open_Balance__c</fullName>
        <label>QB Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_Customer_Type__c</fullName>
        <label>QuickBooks Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <label>Terms</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Assigns the NY Engineer to the specific Account</description>
        <inlineHelpText>Assigns the NY Engineer to the specific Account</inlineHelpText>
        <label>Account Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition__c</fullName>
        <label>Acquisition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_QB_Id__c</fullName>
        <label>First QB Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_QB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From QB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Used to capture the phone extension of the primary phone number</description>
        <inlineHelpText>Used to capture the phone extension of the primary phone number</inlineHelpText>
        <label>Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <externalId>true</externalId>
        <label>QB Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Synced__c</fullName>
        <formula>IF(Is_Synced__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Synced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_id_Formula__c</fullName>
        <formula>QB_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>Account_Manager__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>X119_125_Seventh_Ave_Reality_LLLC</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>119-125 Seventh Ave Reality LLC</label>
    </listViews>
    <listViews>
        <fullName>X554</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>554 Broome LLC</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AVSFQB__Customer_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNULL($User.AVSFQB__DBSync_Id__c) ,IF(LEN( Name ) &gt; 41,true,false),IF(LEN( Name ) &gt; 100,true,false))</errorConditionFormula>
        <errorMessage>Length of Customer Name is too long, please rectify it. (QB Desktop: 41 Chars, QB Online: 100 Chars)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Website_Validation_QBO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Website  &lt;&gt; null,LEFT( Website , 7) != &apos;http://&apos;,LEFT( Website , 8) != &apos;https://&apos;)</errorConditionFormula>
        <errorDisplayField>Website</errorDisplayField>
        <errorMessage>Website must start with https:// or http://.</errorMessage>
    </validationRules>
</CustomObject>